# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../third_party/typescript/typescript.gni")

devtools_module("elements") {
  sources = [
    "AccessibilityTreeUtils.ts",
    "AccessibilityTreeView.ts",
    "Adorner.ts",
    "AdornerManager.ts",
    "AdornerSettingsPane.ts",
    "CSSPropertyIconResolver.ts",
    "ClassesPaneWidget.ts",
    "ColorSwatchPopoverIcon.ts",
    "ComputedStyleModel.ts",
    "ComputedStyleProperty.ts",
    "ComputedStyleTrace.ts",
    "ComputedStyleWidget.ts",
    "DOMLinkifier.ts",
    "DOMPath.ts",
    "ElementStatePaneWidget.ts",
    "ElementsBreadcrumbs.ts",
    "ElementsBreadcrumbsUtils.ts",
    "ElementsPanel.ts",
    "ElementsPanelLink.ts",
    "ElementsSidebarPane.ts",
    "ElementsTreeElement.ts",
    "ElementsTreeElementHighlighter.ts",
    "ElementsTreeOutline.ts",
    "EventListenersWidget.ts",
    "FlexboxEditor.ts",
    "FlexboxEditorWidget.ts",
    "ImagePreviewPopover.ts",
    "InspectElementModeController.ts",
    "LayoutPane.ts",
    "LayoutPaneUtils.ts",
    "LayoutSidebarPane.ts",
    "MarkerDecorator.ts",
    "MetricsSidebarPane.ts",
    "NodeStackTraceWidget.ts",
    "NodeText.ts",
    "PlatformFontsWidget.ts",
    "PropertiesWidget.ts",
    "PropertyNameCategories.ts",
    "StylePropertyHighlighter.ts",
    "StylePropertyTreeElement.ts",
    "StylesSidebarPane.ts",
  ]

  deps = [
    "../../bindings:bundle",
    "../../color_picker:bundle",
    "../../common:bundle",
    "../../components:bundle",
    "../../extensions:bundle",
    "../../formatter:bundle",
    "../../generated",
    "../../i18n:bundle",
    "../../inline_editor:bundle",
    "../../mobile_throttling:bundle",
    "../../object_ui:bundle",
    "../../panels/emulation:bundle",
    "../../panels/event_listeners:bundle",
    "../../platform:bundle",
    "../../protocol_client:bundle",
    "../../render_coordinator:bundle",
    "../../root:bundle",
    "../../sdk:bundle",
    "../../text_editor:bundle",
    "../../third_party/lit-html:bundle",
    "../../ui:bundle",
    "../../ui/components:bundle",
    "../../workspace:bundle",
  ]

  visibility = [
    "../../../test/unittests/front_end/elements",
    "../../component_docs/*",
  ]
}

copy_to_gen("legacy_css") {
  sources = [ "layoutPane.css" ]
}

devtools_entrypoint("bundle") {
  entrypoint = "elements.ts"

  deps = [ ":elements" ]
}

devtools_entrypoint("legacy") {
  entrypoint = "elements-legacy.ts"

  deps = [ ":bundle" ]
}

devtools_entrypoint("meta") {
  entrypoint = "elements-meta.ts"

  deps = [
    ":bundle",
    "../../root:bundle",
    "../../ui:bundle",
  ]
}
