# Copyright 2020 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../scripts/build/ninja/devtools_module.gni")
import("../../../scripts/build/ninja/generate_css.gni")
import("../../../third_party/typescript/typescript.gni")
import("../visibility.gni")

generate_css("css_files") {
  sources = [
    "JSONEditor.css",
    "protocolMonitor.css",
    "toolbar.css",
  ]
}

devtools_module("protocol_monitor") {
  sources = [
    "JSONEditor.ts",
    "ProtocolMonitor.ts",
  ]

  deps = [
    "../../core/host:bundle",
    "../../core/i18n:bundle",
    "../../core/protocol_client:bundle",
    "../../core/sdk:bundle",
    "../../models/text_utils:bundle",
    "../../ui/components/buttons:bundle",
    "../../ui/components/data_grid:bundle",
    "../../ui/components/icon_button:bundle",
    "../../ui/components/menus:bundle",
    "../../ui/components/suggestion_input:bundle",
    "../../ui/legacy:bundle",
    "../../ui/legacy/components/source_frame:bundle",
    "../../ui/lit-html:bundle",
    "../elements/components:bundle",
  ]
}

devtools_entrypoint("bundle") {
  entrypoint = "protocol_monitor.ts"

  deps = [
    ":css_files",
    ":protocol_monitor",
  ]

  visibility = [
    ":*",
    "../../entrypoints/*",
  ]

  visibility += devtools_panels_visibility
}

devtools_entrypoint("meta") {
  entrypoint = "protocol_monitor-meta.ts"

  deps = [
    ":bundle",
    "../../core/i18n:bundle",
    "../../core/root:bundle",
    "../../ui/legacy:bundle",
  ]

  visibility = [ "../../entrypoints/*" ]
}

ts_library("unittests") {
  testonly = true

  sources = [
    "JSONEditor.test.ts",
    "ProtocolMonitor.test.ts",
  ]

  deps = [
    ":bundle",
    "../../testing",
    "../../ui/components/suggestion_input:bundle",
  ]
}
